Progress with Diagram and samples

--- a/Src/Dimension3D.Core/Dimension3D.Core.csproj
+++ b/Src/Dimension3D.Core/Dimension3D.Core.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>$(MSBuildProjectName)</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="ModelVisual3D\UiElement\ButtonBase\ToggleButton\RadioButton\" />
+  </ItemGroup>
+
 </Project>
