--- a/Src/Dimension3D.Core/Dimension3D.Core.csproj
+++ b/Src/Dimension3D.Core/Dimension3D.Core.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="ModelVisual3D\Geometry\" />
     <Folder Include="ModelVisual3D\UiElement\ButtonBase\ToggleButton\RadioButton\" />
   </ItemGroup>
 
