--- a/Src/Dimension3D.Core/Dimension3D.Core.csproj
+++ b/Src/Dimension3D.Core/Dimension3D.Core.csproj
@@ -7,5 +7,9 @@
     <RootNamespace>$(MSBuildProjectName)</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Control\Buttons\" />
+  </ItemGroup>
+
 
 </Project>
